# OptimalEmbodiment

./: .gitignore  .gitmodules  README.md  pyproject.toml
docs/: evaluation.md  randomization.md
optimal_embodiment/: __init__.py  constants.py
optimal_embodiment/eval/: robot2human.py
optimal_embodiment/randomization/: build.py
optimal_embodiment/robot/: build.py  utils.py
optimal_embodiment/smpl/: __init__.py  human.py
scripts/: evaluation.py  retargeting.py  visualize.py
test/dataset/: testing_dataset.py  visualize_data.py
test/randomizer/: radomize_env.py
test/retargeting/: full_pipeline_eval.py  robot2human.py
