[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "optimal-embodiment"
version = "0.1.0"
description = "Experimentation framework for the Optimal Embodiment project using AMASS human motion data."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Leonardo", email = "leo.perez.nestares@gmail.com" }
]
license = { text = "MIT" }
dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "tqdm",
  "torch",
  "matplotlib",
  "dotmap==1.3.30",
  "tqdm==4.67.3",
  "human-body-prior==0.8.5.0",
  "body-visualizer @ git+https://github.com/nghorbani/body_visualizer.git",
  "imageio[ffmpeg]",
  "mujoco==3.5.0",
  "dm-control==1.0.37",
  "general_motion_retargeting @ file:./third_party/gmr"
]

[tool.setuptools]
packages = ["optimal_embodiment"]
